﻿drkns 21.12.2015 20:25:07 +0200 - build 4490

1. Рефакторинг, продолжение 4484.

drkns 21.12.2015 08:13:52 +0200 - build 4489

1. И ещё.

drkns 20.12.2015 19:10:39 +0200 - build 4488

1. И ещё.

drkns 20.12.2015 16:47:03 +0200 - build 4487

1. И ещё одно уточнение 4484.1.

drkns 20.12.2015 16:20:08 +0200 - build 4486

1. Рефакторинг, продолжение 4484.

drkns 20.12.2015 03:05:03 +0200 - build 4485

1. Уточнение 4484.1.

drkns 19.12.2015 21:59:59 +0200 - build 4484

1. Рефакторинг. Перетряхнуто много в строках ввода и, как следствие, редакторе. Возможны последствия.

2. Продолжение 4473, учтём пожелания телезрителей: кнопки вставляют новый текст в позицию курсора, а не заменяют всё.

zg 19.12.2015 14:36:32 +0200 - build 4483

1. убрана двойная конвертация INPUT_RECORD в FarKey и обратно.

drkns 19.12.2015 14:07:47 +0200 - build 4482

1. 0003137: Опечатка в выводе Far.exe -?
   На самом деле вывод правильный, ошибка в другом месте.

drkns 18.12.2015 19:39:04 +0200 - build 4481

1. И ещё одно уточнение 4473.

w17 18.12.2015 13:24:46 +0300 - build 4480

1. Experimental: M#1910: "Add to archive" hotkey does not wok in Temporary Panel.

drkns 17.12.2015 21:32:47 +0200 - build 4479

1. Уточнение 4473: Selection при отсутствии блока берёт всю строку.

drkns 17.12.2015 20:56:42 +0200 - build 4478

1. User menu, состоящее из одних разделителей (коварство пользователей не знает границ), приводило к AV.

zg 16.12.2015 22:53:06 +0200 - build 4477

1. assert при вводе alt-65536 в редакторе.

drkns 16.12.2015 20:53:34 +0200 - build 4476

1. И ещё одно уточнение 4473.

drkns 16.12.2015 19:48:28 +0200 - build 4475

1. Продолжение 4473, учтём пожелания телезрителей.

drkns 16.12.2015 11:48:50 +0200 - build 4474

1. Уточнение 4473.

drkns 16.12.2015 00:42:39 +0200 - build 4473

1. Опция Editor settings - [x] Pick up the word удалена.
   Вместо неё теперь кнопки [ Word ] и [ Selection ] прямо в диалоге поиска, вставляющие в строку то, что на них написано.