@@ -1,4 +1,10 @@
-﻿drkns 21.12.2015 20:25:07 +0200 - build 4490
+﻿drkns 22.12.2015 09:38:41 +0200 - build 4491
+
+1. С форума: Если открыть в редакторе приложенный файл и нажать End, FAR падает.
+
+2. #0003143: При движении стрелками в редакторе добавляются пробелы
+
+drkns 21.12.2015 20:25:07 +0200 - build 4490
 
 1. Рефакторинг, продолжение 4484.
 
